exports[`test should mount an open modal 1`] = `
<ModalDialogContent>
  <div
    className="terra-ModalDialog-content">
    This is content
  </div>
</ModalDialogContent>
`;

exports[`test should render an open modal 1`] = `
<div
  class="terra-ModalDialog-content">
  This is content
</div>
`;

exports[`test should shallow an open modal 1`] = `
<div
  className="terra-ModalDialog-content">
  This is content
</div>
`;
